--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,45 @@ body {
   body {
     padding-top: 73px; } }
 
+.f-35 {
+  font-size: 35px; }
+  @media only screen and (max-width: 479px) {
+    .f-35 {
+      font-size: 25px; } }
+
+.f-28 {
+  font-size: 28px; }
+
+.f-24 {
+  font-size: 24px; }
+
+.f-20 {
+  font-size: 20px; }
+
+.f-18 {
+  font-size: 18px; }
+
+.f-16 {
+  font-size: 16px; }
+
+.f-14 {
+  font-size: 14px; }
+
+.f-12 {
+  font-size: 12px; }
+
+.w-400 {
+  font-weight: 400; }
+
+.w-500 {
+  font-weight: 500; }
+
+.w-600 {
+  font-weight: 600; }
+
+.w-700 {
+  font-weight: 700; }
+
 .header {
   padding-top: 10px !important;
   padding-bottom: 10px !important;
@@ -1363,16 +1402,15 @@ card
   flex-direction: column;
   justify-content: center;
   align-self: center; }
-  @media only screen and (max-width: 767px) {
+  @media only screen and (max-width: 991px) {
     .sign-body {
       justify-content: flex-start;
       align-self: flex-start;
-      padding-top: 10px !important; } }
+      height: 100%; } }
 
-.navbar-brand-sign {
-  height: 70px;
-  width: auto;
-  padding-top: 10px; }
+.navbar-brand-sign img {
+  height: 50px;
+  width: auto; }
 
 .sign-heading-small h4 {
   display: none;
@@ -1486,6 +1524,61 @@ card
         background-color: white !important;
         border: 2px solid #4B3591 !important; }
 
+.sign__btn-small {
+  display: flex;
+  justify-content: center; }
+  @media only screen and (max-width: 767px) {
+    .sign__btn-small {
+      display: block  !important; } }
+  .sign__btn-small button {
+    width: 100% !important;
+    background-color: transparent !important;
+    border: none !important; }
+    .sign__btn-small button a {
+      text-decoration: none !important;
+      font-size: 1.5rem !important;
+      font-weight: 600 !important;
+      padding: 6px 20px !important;
+      border: none !important;
+      border-radius: 3px;
+      background-color: white !important;
+      color: #4B3591 !important;
+      border: 2px solid #4B3591 !important;
+      width: 100% !important;
+      flex-wrap: 1;
+      display: flex;
+      justify-content: center; }
+      @media only screen and (max-width: 767px) {
+        .sign__btn-small button a {
+          width: 100% !important;
+          padding: 8px 20px !important;
+          border-radius: 4px;
+          font-weight: 600 !important;
+          font-size: 1.5rem !important; } }
+      @media only screen and (max-width: 479px) {
+        .sign__btn-small button a {
+          font-size: 1.6rem !important; } }
+      .sign__btn-small button a:hover {
+        color: white !important;
+        background-color: #4B3591 !important; }
+
+.ask-account {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center; }
+  @media only screen and (max-width: 767px) {
+    .ask-account {
+      display: none; } }
+  .ask-account p {
+    padding-top: 10px;
+    font-size: 1.5rem; }
+    .ask-account p a {
+      font-weight: 600;
+      color: #4B3591;
+      text-decoration: none; }
+
 .ask-account {
   display: block !important;
   text-align: center;
@@ -1540,10 +1633,6 @@ card
     .sign__field-input {
       font-size: 15px;
       padding: 8px 10px; } }
-  @media only screen and (max-width: 479px) {
-    .sign__field-input {
-      font-size: 16px;
-      padding: 11px 10px; } }
 
 .sign__field-input:focus {
   border: 2px solid #4B3591;
@@ -1578,9 +1667,6 @@ card
   @media only screen and (max-width: 767px) {
     .sign__field-input:placeholder-shown + .sign__field-label {
       transform: translate(10px, 3.005rem) scale(1.5); } }
-  @media only screen and (max-width: 479px) {
-    .sign__field-input:placeholder-shown + .sign__field-label {
-      transform: translate(10px, 3.955rem) scale(1.5); } }
 
 /**
   * By default, the placeholder should be transparent. Also, it should 
@@ -1966,3 +2052,26 @@ card
     font-size: 1.3rem;
     color: white;
     text-decoration: none; }
+
+.sign-col-right {
+  background-color: #4B3591;
+  padding: 20px 50px; }
+  @media only screen and (max-width: 991px) {
+    .sign-col-right {
+      padding: 20px 10px; } }
+
+.form-row {
+  border: 1px solid #ccc; }
+
+.sign-col-left {
+  padding: 10px !important; }
+
+.form-fields {
+  padding: 10px 50px; }
+  @media only screen and (max-width: 479px) {
+    .form-fields {
+      padding: 10px 0px !important; } }
+
+.online-aucation-img {
+  height: 130px;
+  width: auto; }
