--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -1,6 +1,5 @@
 .carousel{
     position: relative;
-    margin-bottom: 25px;
 }
 
 .aucation-text-div{
@@ -381,3 +380,9 @@
     color: $blue;
     margin: 0px 7px;
   }
+  .dropdown-menu{
+ width: 150px;
+  }
+
+
+//  
