--- a/sass/components/filter.scss
+++ b/sass/components/filter.scss
@@ -13,14 +13,14 @@
     
    }
   }
-.sm-padding{
-    @media only screen and (max-width: 991px){
-        padding: 0px 5px;
-    }
-    @media only screen and (max-width: 767px){
-        padding: 0px 0px;
-    }
-}
+// .sm-padding{
+//     @media only screen and (max-width: 991px){
+//         padding: 0px 5px;
+//     }
+//     @media only screen and (max-width: 767px){
+//         padding: 0px 0px;
+//     }
+// }
 // collapseable divs
 .collapsible__div {
     color: $black;
@@ -257,4 +257,21 @@ label {
     box-shadow: none !important;
      outline: none !important;
      border: 1px solid black;
+}
+
+.filter-header{
+    background-color: $blue;
+    padding: 5px 10px;
+    border-radius: 6px 6px 1px 1px;
+    @media only screen and (max-width:991px){
+        display: none;
+    }
+}
+
+.filter-items{
+    padding: 0px 13px;
+
+    @media only screen and (max-width:991px){
+        padding: 0px ;
+    }
 }
