--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -30,11 +30,23 @@
 
 .nav-input {
     position: relative;
-    width: 57%;
+    width: 36%;
     font-size: 1.3rem;
     height: 40px;
-}
 
+    @media only screen and (max-width:767px){
+        position:absolute;
+          top: 30px;
+          height: 0px;
+          input{
+            height: 40px;
+            display: none;
+          }
+    }
+}
+.cross{
+    display: none;
+}
 .nav-input input {
     position: relative;
     width: 100%;
@@ -42,7 +54,7 @@
     border: 1px solid #f5f6f7;
     font-size: 1.5rem;
     border-radius: 5px;
-    padding: 5px 1rem !important;
+    padding: 5px 10px!important;
     background-color: #f5f6f7 !important;
     border-right: none !important;
 }
@@ -58,11 +70,11 @@
     position: absolute;
     top: 0px;
     right: 0px;
-    background-color: #4B3591;
+    background-color: transparent;
     height: 100%;
     overflow: hidden;
     padding: 0px 30px;
-    border: 2px solid #4B3591;
+    border: 2px solid transparent;
     border-radius: 0px 10px 10px 0px;
     display: flex;
     justify-content: center;
@@ -73,6 +85,7 @@
         height: 22px;
         width: 20px;
         cursor: pointer;
+        stroke: $blue;
     }
 }
 
@@ -99,8 +112,8 @@
 
 .nav-link {
     color: #444444 !important;
-    font-weight: 700;
-    font-size: 1.33rem;
+    font-weight: 600;
+    font-size: 16px;
     text-transform: capitalize;
     font-family: 'Yaldevi', sans-serif;
 
@@ -226,7 +239,7 @@
   }
   
   .openHeadbtn {
-    font-size: 20px;
+    font-size: 25px;
     cursor: pointer;
     background-color: transparent;
     color: #111;
@@ -234,7 +247,16 @@
     display: none;
   }
  
- 
+ .search-btn{
+    @media only screen and (min-width:767px) {
+        display: none;
+    }
+    i{
+        color: $blue;
+        font-size: 24px;
+        padding-right: 30px;
+    }
+ }
 
 
 //   ===============================
@@ -378,7 +400,7 @@
     }
 
     .sidenav-content {
-        padding: 35px 20px;
+        padding: 0px 20px;
     }
     .small-heading{
         display: block !important;
@@ -442,13 +464,14 @@
     }
     .navbar-brand {
         margin-right: 0px !important;
+          padding: 0px !important;
     }
 
-    .navbar-brand img {
-        display: none;
-        width: 0px;
-        opacity: 0;
-    }
+    // .navbar-brand img {
+    //     display: none;
+    //     width: 0px;
+    //     opacity: 0;
+    // }
 
     .nav-input {
         font-size: 1.4rem;
@@ -586,7 +609,7 @@
         font-size: 1.5rem;
         width: 90.5%;
         margin-left: auto;
-        height: 40px;
+        // height: 40px;
     }
 
     .nav-input input {
@@ -594,9 +617,9 @@
         padding: 30px 3px;
     }
 
-    .input-icon {
-        padding: 0px 18px;
-    }
+    // .input-icon {
+    //     padding: 0px 18px;
+    // }
     .openHeadbtn{
         font-size: 17px;
     }
@@ -728,3 +751,387 @@
 //       margin: 3px 0px; }
 //     .nav-label {
 //       font-size: 8.2px; } }
+
+
+
+// styled dropdown
+
+.sec-center {
+    position: relative;
+    max-width: 100%;
+    text-align: center;
+    z-index: 200;
+  }
+  [type="checkbox"]:checked,
+  [type="checkbox"]:not(:checked){
+    position: absolute;
+    left: -9999px;
+    opacity: 0;
+    pointer-events: none;
+  }
+  .dark-light:checked + label,
+  .dark-light:not(:checked) + label{
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    z-index: 20000;
+    display: block;
+    border-radius: 50%;
+    width: 46px;
+    height: 46px;
+    cursor: pointer;
+    transition: all 200ms linear;
+  }
+  .dark-light:checked + label{
+    transform: rotate(360deg);
+  }
+  .dark-light:checked + label:after,
+  .dark-light:not(:checked) + label:after{
+    position: absolute;
+    content: '';
+    top: 1px;
+    left: 1px;
+    overflow: hidden;
+    z-index: 2;
+    display: block;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    background-color: #102770;
+    background-image: url('https://assets.codepen.io/1462889/moon.svg');
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all 200ms linear;
+    opacity: 0;
+  }
+  .dark-light:checked + label:after {
+    opacity: 1;
+  }
+  .dark-light:checked + label:before,
+  .dark-light:not(:checked) + label:before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 1;
+    display: block;
+    border-radius: 50%;
+    width: 46px;
+    height: 46px;
+    background-color: #48dbfb;
+    background-image: url('https://assets.codepen.io/1462889/sun.svg');
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: all 200ms linear;
+  }
+  .dark-light:checked + label:before{
+    background-color: #000;
+  }
+  .light-back{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: #fff;
+    overflow: hidden;
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
+    background-position: center;
+    background-repeat: repeat;
+    background-size: 4%;
+    height: 100%;
+    width: 100%;
+    transition: all 200ms linear;
+    opacity: 0;
+  }
+  .dark-light:checked ~ .light-back{
+    opacity: 1;
+  }
+  .nav-dropdown{
+    height: 20px !important;
+    width: 30px !important;
+    .nav-link {
+        padding: 8px 20px !important;
+        
+    }
+    .fa-angle-down{
+        margin-left: 5px;
+    }
+  }
+  .dropdown:checked + label,
+  .dropdown:not(:checked) + label{
+    position: relative;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 2;
+    height: 50px;
+    transition: all 200ms linear;
+    border-radius: 4px;
+    width: 220px;
+    letter-spacing: 1px;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    text-align: center;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    color: #102770;
+  }
+  .dark-light:checked ~ .sec-center .for-dropdown{
+    background-color: #102770;
+    color: white;
+    box-shadow: 0 12px 35px 0 $blue;
+  }
+  .dropdown:checked + label:before,
+  .dropdown:not(:checked) + label:before{
+    position: fixed;
+    top: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    cursor: auto;
+    pointer-events: none;
+  }
+  .dropdown:checked + label:before{
+    pointer-events: auto;
+  }
+  .dropdown:not(:checked) + label .uil {
+    font-size: 24px;
+    margin-left: 10px;
+    transition: transform 200ms linear;
+  }
+  .dropdown:checked + label .uil {
+    transform: rotate(180deg);
+    font-size: 24px;
+    margin-left: 10px;
+    transition: transform 200ms linear;
+  }
+  .section-dropdown {
+    position: absolute;
+    padding: 5px;
+    background-color: $blue;
+    top: 40px;
+    right: 0;
+    width: 120px;
+    border-radius: 4px;
+
+    display: block;
+    z-index: 100;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(20px);
+    transition: all 200ms linear;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown {
+    background-color: #fff;
+  }
+  .dropdown:checked ~ .section-dropdown{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0);
+  }
+  .section-dropdown:before {
+    position: absolute;
+    top: -20px;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    content: '';
+    display: block;
+    z-index: 1;
+  }
+  .section-dropdown:after {
+    position: absolute;
+    top: -7px;
+    right: 15px;
+    width: 0; 
+    height: 0; 
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent; 
+    border-bottom: 8px solid $blue;
+    content: '';
+    display: block;
+    z-index: 2;
+    transition: all 200ms linear;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown:after {
+    border-bottom: 8px solid #fff;
+  }
+  
+  a {
+    position: relative;
+    color: #fff;
+    transition: all 200ms linear;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    border-radius: 2px;
+    padding: 0px 0;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin: 2px 0;
+    text-align: left;
+    text-decoration: none;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    justify-content: space-between;
+      -ms-flex-pack: distribute;
+      padding: 5px 15px;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown a {
+    color: #102770;
+  }
+  a:hover {
+    color: #102770;
+    background-color: white;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown a:hover {
+    color: white;
+    background-color: #102770;
+  }
+  a .uil {
+    font-size: 22px;
+  }
+  .dropdown-sub:checked + label,
+  .dropdown-sub:not(:checked) + label{
+    position: relative;
+    color: #fff;
+    transition: all 200ms linear;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    border-radius: 2px;
+    padding: 5px 0;
+    padding-left: 20px;
+    padding-right: 15px;
+    text-align: left;
+    text-decoration: none;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    justify-content: space-between;
+      -ms-flex-pack: distribute;
+      cursor: pointer;
+  }
+  .dropdown-sub:checked + label .uil,
+  .dropdown-sub:not(:checked) + label .uil{
+    font-size: 22px;
+  }
+  .dropdown-sub:not(:checked) + label .uil {
+    transition: transform 200ms linear;
+  }
+  .dropdown-sub:checked + label .uil {
+    transform: rotate(135deg);
+    transition: transform 200ms linear;
+  }
+  .dropdown-sub:checked + label:hover,
+  .dropdown-sub:not(:checked) + label:hover{
+    color: #102770;
+    background-color: white;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown .for-dropdown-sub{
+    color: #102770;
+  }
+  .dark-light:checked ~ .sec-center .section-dropdown .for-dropdown-sub:hover{
+    color: white;
+    background-color: #102770;
+  }
+  
+  .section-dropdown-sub {
+    position: relative;
+    display: block;
+    width: 100%;
+    pointer-events: none;
+    opacity: 0;
+    max-height: 0;
+    padding-left: 10px;
+    padding-right: 3px;
+    overflow: hidden;
+    transition: all 200ms linear;
+  }
+  .dropdown-sub:checked ~ .section-dropdown-sub{
+    pointer-events: auto;
+    opacity: 1;
+    max-height: 999px;
+  }
+  .section-dropdown-sub a {
+    font-size: 14px;
+  }
+  .section-dropdown-sub a .uil {
+    font-size: 20px;
+  }
+  .logo {
+      position: fixed;
+      top: 50px;
+      left: 40px;
+      display: block;
+      z-index: 11000000;
+    background-color: transparent;
+    border-radius: 0;
+    padding: 0;
+      transition: all 250ms linear;
+  }
+  .logo:hover {
+    background-color: transparent;
+  }
+  .logo img {
+      height: 26px;
+      width: auto;
+      display: block;
+    transition: all 200ms linear;
+  }
+  .dark-light:checked ~ .logo img{
+    filter: brightness(10%);
+  }
+  
+  @media screen and (max-width: 991px) {
+  .logo {
+      top: 30px;
+      left: 20px;
+  }
+  .dark-light:checked + label,
+  .dark-light:not(:checked) + label{
+    top: 20px;
+    right: 20px;
+  }
+  }
+
+  .profile-drop-mobile{
+    display: none;
+    @media only screen and (max-width:767px){
+        display: block;
+    }
+  }
+  .profile-drop-desktop{
+    @media only screen and (max-width:767px){
+        display: none;
+    }
+  }
+  .small-icons{
+    display: none;
+    @media only screen and (max-width:767px){
+        display: block;
+    }
+  }
