--- a/css/style.css
+++ b/css/style.css
@@ -651,8 +651,8 @@ body {
   .nav-dropdown .fa-angle-down {
     margin-left: 5px; }
 
-.dropdown:checked + label,
-.dropdown:not(:checked) + label {
+.dropdown-header:checked + label,
+.dropdown-header:not(:checked) + label {
   position: relative;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
@@ -686,8 +686,8 @@ body {
   color: white;
   box-shadow: 0 12px 35px 0 #4B3591; }
 
-.dropdown:checked + label:before,
-.dropdown:not(:checked) + label:before {
+.dropdown-header:checked + label:before,
+.dropdown-header:not(:checked) + label:before {
   position: fixed;
   top: 0;
   left: 0;
@@ -698,15 +698,15 @@ body {
   cursor: auto;
   pointer-events: none; }
 
-.dropdown:checked + label:before {
+.dropdown-header:checked + label:before {
   pointer-events: auto; }
 
-.dropdown:not(:checked) + label .uil {
+.dropdown-header:not(:checked) + label .uil {
   font-size: 24px;
   margin-left: 10px;
   transition: transform 200ms linear; }
 
-.dropdown:checked + label .uil {
+.dropdown-header:checked + label .uil {
   transform: rotate(180deg);
   font-size: 24px;
   margin-left: 10px;
@@ -721,7 +721,7 @@ body {
   width: 120px;
   border-radius: 4px;
   display: block;
-  z-index: 100;
+  z-index: 1000 !important;
   opacity: 0;
   pointer-events: none;
   transform: translateY(20px);
@@ -730,7 +730,7 @@ body {
 .dark-light:checked ~ .sec-center .section-dropdown {
   background-color: #fff; }
 
-.dropdown:checked ~ .section-dropdown {
+.dropdown-header:checked ~ .section-dropdown {
   opacity: 1;
   pointer-events: auto;
   transform: translateY(0); }
