--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 @import "components/filter";
 @import "components/cards";
 @import "components/modal.scss";
-
+@import "components/table.scss";
 @import "pages/home";
 @import "pages/sign-In";
 @import "pages/about";
