--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
   background: #f4f4f4;
   padding-top: 79px; }
 
+.profile-body {
+  padding-top: 110px !important; }
+
 .white-bg {
   background-color: #fff !important; }
 
@@ -72,9 +75,23 @@ body {
 .blue-text {
   color: #4B3591; }
 
+.text-primary {
+  color: #4B3591 !important; }
+
+body::-webkit-scrollbar {
+  width: 10px; }
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
+
+body::-webkit-scrollbar-thumb {
+  background-color: #4B3591;
+  outline: 1px solid #4B3591;
+  border-radius: 10px; }
+
 .header {
   padding-top: 10px !important;
-  padding-bottom: 10px !important;
+  padding-bottom: 10px;
   z-index: 100;
   background-color: #fff;
   box-shadow: 0 0 3px #ccc; }
@@ -370,12 +387,13 @@ body {
 
 @media only screen and (max-width: 991px) {
   .filter-icon {
-    font-size: 15px;
+    font-size: 18px;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 0px 5px 0px; }
+    padding: 0px 0px 5px 0px;
+    font-weight: 600; }
   .sidenav {
     height: 100%;
     width: 0;
@@ -723,9 +741,16 @@ body {
   display: block;
   z-index: 1000 !important;
   opacity: 0;
-  pointer-events: none;
   transform: translateY(20px);
   transition: all 200ms linear; }
+  @media only screen and (max-width: 991px) {
+    .section-dropdown {
+      opacity: 1;
+      display: none;
+      top: 20px; } }
+  .section-dropdown a:hover {
+    color: #102770;
+    background-color: white; }
 
 .dark-light:checked ~ .sec-center .section-dropdown {
   background-color: #fff; }
@@ -788,10 +813,6 @@ a {
 
 .dark-light:checked ~ .sec-center .section-dropdown a {
   color: #102770; }
-
-a:hover {
-  color: #102770;
-  background-color: white; }
 
 .dark-light:checked ~ .sec-center .section-dropdown a:hover {
   color: white;
@@ -917,6 +938,13 @@ a .uil {
   @media only screen and (max-width: 767px) {
     .small-icons {
       display: block; } }
+
+.menu:hover {
+  color: #102770;
+  background-color: white; }
+  @media only screen and (max-width: 991px) {
+    .menu:hover {
+      background-color: transparent !important; } }
 
 .owl-carousel {
   position: relative; }
@@ -1216,6 +1244,13 @@ a .uil {
 
 .allButFooter2 {
   min-height: calc(100vh - 43px); }
+
+@media only screen and (max-width: 768px) {
+  .list-unstyled .f-links {
+    text-align: center !important;
+    display: flex;
+    justify-content: center;
+    align-items: center; } }
 
 .fixed-nav {
   padding-bottom: 105px; }
@@ -1739,6 +1774,85 @@ card
   background-color: transparent !important;
   box-shadow: none !important; }
 
+.dataTables_length {
+  font-size: 14px; }
+
+.dataTables_filter {
+  font-size: 14px;
+  margin-bottom: 20px; }
+
+.dataTables_info {
+  font-size: 16px; }
+
+div.dataTables_wrapper {
+  width: 100%;
+  margin: 0 auto; }
+
+.products-table-head {
+  font-size: 16px;
+  font-weight: 600 !important;
+  color: #4B3591 !important; }
+
+.status-green {
+  color: #108a10;
+  font-weight: 600; }
+
+.status-active {
+  color: #e5e515;
+  font-weight: 600; }
+
+.status-pause {
+  color: #a1a1a1;
+  font-weight: 600; }
+
+.icons a {
+  font-size: 16px;
+  color: black; }
+
+.icons button {
+  font-size: 16px;
+  color: black;
+  border: none;
+  background-color: transparent; }
+
+.product-table-text {
+  font-size: 16px;
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
+table.dataTable tbody th, table.dataTable tbody td {
+  padding: 4px 5px !important;
+  border-bottom: 1px solid #e6e5e5 !important; }
+
+.products-table-heading {
+  padding: 20px 0px 0px 20px; }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+  background-color: #4B3591 !important; }
+
+.products-table-wrapper {
+  padding: 30px 40px; }
+  @media only screen and (max-width: 1024px) {
+    .products-table-wrapper {
+      overflow-x: hidden !important;
+      overflow-x: scroll !important; } }
+  .products-table-wrapper::-webkit-scrollbar {
+    width: 5px;
+    height: 5px; }
+  .products-table-wrapper::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); }
+  .products-table-wrapper::-webkit-scrollbar-thumb {
+    background-color: #4B3591;
+    outline: 1px solid #4B3591; }
+
+.products-table {
+  font-size: 16px; }
+  @media only screen and (max-width: 1024px) {
+    .products-table {
+      width: 900px !important; } }
+
 .carousel {
   position: relative; }
 
@@ -2016,7 +2130,11 @@ card
   margin: 0px 7px; }
 
 .dropdown-menu {
-  width: 150px; }
+  min-width: 150px;
+  padding: 5px 10px;
+  border-radius: 3px; }
+  .dropdown-menu li {
+    padding: 3px; }
 
 .sign__box {
   border: 1px solid #ccc;
@@ -3369,10 +3487,6 @@ card
 .account-body {
   padding-top: 80px !important;
   min-height: 102vh !important; }
-  @media only screen and (max-width: 767px) {
-    .account-body {
-      padding-top: 0px !important;
-      padding-bottom: 53px; } }
 
 .large-cat {
   display: block; }
@@ -3381,8 +3495,9 @@ card
       display: none; } }
 
 .small-cat {
-  display: block; }
-  @media only screen and (max-width: 767px) {
+  position: relative !important;
+  display: none; }
+  @media only screen and (max-width: 991px) {
     .small-cat {
       display: block; } }
 
@@ -3517,7 +3632,7 @@ card
       height: 110px !important;
       width: 110px !important; } }
   .wants__img img {
-    width: 100%;
+    width: auto;
     height: 100%;
     object-fit: cover;
     position: relative;
@@ -3951,8 +4066,108 @@ input:checked + .slider:before {
   align-items: center;
   padding-top: 5px;
   padding-bottom: 2px; }
+  @media only screen and (max-width: 991px) {
+    .account-nav {
+      display: none; } }
 
 .active-account {
   color: #102770;
   background-color: white;
   font-weight: 600; }
+
+.info-heading {
+  min-width: 150px; }
+
+.shadow-bg-profile {
+  background-color: #ffffff;
+  box-shadow: 0 0 5px #ccc;
+  border-radius: 6px;
+  padding: 20px 30px; }
+
+.profile-btn {
+  background-color: #4B3591 !important;
+  border: 2px solid #4B3591;
+  padding: 6px 20px;
+  color: white;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 18px; }
+
+.profile-btn:hover {
+  background-color: transparent !important;
+  color: #4B3591; }
+
+.profile-btn2:hover {
+  background-color: #4B3591 !important;
+  color: white; }
+
+.profile-btn2 {
+  background-color: transparent !important;
+  border: 2px solid #4B3591;
+  padding: 6px 20px;
+  color: #4B3591;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 18px; }
+
+.info-value input {
+  font-size: 16px;
+  font-weight: 500; }
+
+.info-value input {
+  padding: 0px;
+  border: none;
+  border-bottom: 1px solid gray;
+  width: fit-content;
+  text-align: left;
+  border-radius: 0px; }
+
+.info-value textarea {
+  padding: 0px;
+  border: none;
+  border-bottom: 1px solid gray;
+  width: fit-content;
+  text-align: center;
+  border-radius: 0px; }
+
+.info-value textarea:active {
+  outline: none !important;
+  box-shadow: none !important; }
+
+.info-value input:focus {
+  box-shadow: none;
+  outline: none;
+  border-bottom: 1px solid red; }
+
+.form-input label {
+  font-size: 16px;
+  font-weight: 500;
+  margin: 10px 0px 10px 0px; }
+
+.form-input textarea {
+  border: 1px solid #d2d2d2 !important;
+  border-radius: 3px;
+  font-size: 16px;
+  padding: 4px 20px; }
+
+.form-input input {
+  border: 1px solid #d2d2d2 !important;
+  border-radius: 3px;
+  font-size: 18px;
+  padding: 4px 20px; }
+  .form-input input::placeholder {
+    opacity: 1; }
+
+.payment-input label {
+  font-size: 15px;
+  font-weight: 500; }
+
+.payment-input input {
+  border: 1px solid #b6b6b6;
+  padding: 6px 15px;
+  border-radius: 3px;
+  font-size: 18px; }
+  .payment-input input::placeholder {
+    color: gray !important;
+    font-size: 18px;
+    opacity: 1 !important; }
