--- a/sass/base/body.scss
+++ b/sass/base/body.scss
@@ -16,6 +16,10 @@ body {
     padding-top: 79px;
 }
 
+.profile-body {
+    padding-top: 110px !important;
+}
+
 .white-bg {
     background-color: #fff !important;
 }
@@ -23,12 +27,14 @@ body {
 .neg-margin {
     margin-top: -5px;
 }
-.shadow-bg{
+
+.shadow-bg {
     background-color: #ffffff;
     box-shadow: 0 0 5px #ccc;
     padding: 7px 18px !important;
     border-radius: 6px;
 }
+
 @media only screen and (max-width: 767px) {
     body {
         padding-top: 73px;
