--- a/sass/base/variables.scss
+++ b/sass/base/variables.scss
@@ -1,51 +1,81 @@
-
 $black:#00161c;
 $blue:#4B3591;
 $red:#EA4335;
+
 // font sizes
-.f-35{
+.f-35 {
     font-size: 35px;
+
     @media only screen and (max-width: 479px) {
-       font-size: 25px;
+        font-size: 25px;
     }
 }
-.f-28{
+
+.f-28 {
     font-size: 28px;
 }
-.f-24{
+
+.f-24 {
     font-size: 24px;
 }
-.f-20{
+
+.f-20 {
     font-size: 20px;
 }
-.f-18{
+
+.f-18 {
     font-size: 18px;
 }
-.f-16{
+
+.f-16 {
     font-size: 16px;
 }
-.f-14{
+
+.f-14 {
     font-size: 14px;
 }
-.f-12{
+
+.f-12 {
     font-size: 12px;
 }
 
 // font weight
-.w-400{
+.w-400 {
     font-weight: 400;
 }
-.w-500{
-    font-weight: 500 ;
+
+.w-500 {
+    font-weight: 500;
 }
-.w-600{
+
+.w-600 {
     font-weight: 600;
 }
-.w-700{
+
+.w-700 {
     font-weight: 700;
 }
 
 // text
-.blue-text{
+.blue-text {
     color: $blue;
+}
+
+.text-primary {
+    color: $blue !important;
+}
+
+
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: $blue;
+    outline: 1px solid $blue;
+    border-radius: 10px;
 }
