--- a/sass/components/filter.scss
+++ b/sass/components/filter.scss
@@ -1,18 +1,24 @@
 // Fixed sidebar
 
-.fixed-nav{
-    // position: fixed;
-    // top:110px;
+.fixed-nav {
+    // position: sticky;
+    // top:310px;
     // overflow-y: scroll;
     // max-height: 100vh;
     padding-bottom: 105px;
-    @media only screen and (max-width: 767px){
-     position: relative;
-     top: 1rem;
-     padding-bottom: 0px;
-    
-   }
-  }
+
+    @media only screen and (max-width: 767px) {
+        position: relative;
+        top: 1rem;
+        padding-bottom: 0px;
+
+    }
+}
+// .filter-sticky{
+//     position: sticky !important;
+//     top: 300px !important;
+// }
+
 // .sm-padding{
 //     @media only screen and (max-width: 991px){
 //         padding: 0px 5px;
@@ -73,6 +79,7 @@ button:focus {
     position: relative;
     padding-left: 0px
 }
+
 // .radio label,
 // .checkbox label {
 //     display: block;
@@ -88,6 +95,7 @@ button:focus {
 label {
     cursor: pointer
 }
+
 .tick {
     display: block;
     position: relative;
@@ -172,7 +180,7 @@ label {
 
 
 // Results numbers=======================================
-.results-number{
+.results-number {
     position: fixed;
     font-size: 14px;
     font-weight: 600;
@@ -181,19 +189,24 @@ label {
     width: 15%;
 
     z-index: 100;
-    @media only screen and (max-width: 1270px){
+
+    @media only screen and (max-width: 1270px) {
         width: 16%;
     }
-    @media only screen and (max-width: 1080px){
+
+    @media only screen and (max-width: 1080px) {
         width: 18%;
     }
-    @media only screen and (max-width: 991px){
-        width: 22% ;
+
+    @media only screen and (max-width: 991px) {
+        width: 22%;
     }
-    @media only screen and (max-width: 800px){
-        width: 23.5% ;
+
+    @media only screen and (max-width: 800px) {
+        width: 23.5%;
     }
-    @media only screen and (max-width: 767px){
+
+    @media only screen and (max-width: 767px) {
         top: 0px;
         width: 200px;
         padding: 5px 0px;
@@ -202,8 +215,9 @@ label {
         // box-shadow: 0 4px 4px -2px gray;
 
     }
-   
+
 }
+
 //icon bar =================================================
 .icon-bar {
     border: 1px solid #fff;
@@ -211,7 +225,8 @@ label {
     display: block;
     width: 20px;
 }
-#selected{
+
+#selected {
     font-size: 13px;
     color: rgb(161, 161, 161) !important;
     font-weight: 500;
@@ -220,58 +235,64 @@ label {
     height: 0px !important;
     margin: 0px !important;
 }
+
 // style sidebar scroller======================
 .fixed-nav::-webkit-scrollbar {
     width: .9rem;
-    
-}
- 
-.fixed-nav::-webkit-scrollbar-track {
-  background-color: transparent;
-  
-}
- 
-.fixed-nav::-webkit-scrollbar-thumb {
-  background-color: lightgrey;
-  border-radius: 5px;
 
 }
+
+.fixed-nav::-webkit-scrollbar-track {
+    background-color: transparent;
+
+}
+
+.fixed-nav::-webkit-scrollbar-thumb {
+    background-color: lightgrey;
+    border-radius: 5px;
+
+}
+
 // range slider=================================
-.range-label{
+.range-label {
     font-size: 1.3rem;
     font-weight: 500;
 }
-.range-btn{
-    background-color:transparent !important;
+
+.range-btn {
+    background-color: transparent !important;
     border: none !important;
     font-size: 1.3rem;
     font-weight: 500;
 }
-.price-range-field{
+
+.price-range-field {
     font-size: 1.5rem;
     padding: 2px 3px !important;
     width: 90px !important;
 }
+
 .price-range-field:hover,
-.price-range-field:active{
+.price-range-field:active {
     box-shadow: none !important;
-     outline: none !important;
-     border: 1px solid black;
+    outline: none !important;
+    border: 1px solid black;
 }
 
-.filter-header{
+.filter-header {
     background-color: $blue;
     padding: 5px 10px;
     border-radius: 6px 6px 1px 1px;
-    @media only screen and (max-width:991px){
+
+    @media only screen and (max-width:991px) {
         display: none;
     }
 }
 
-.filter-items{
+.filter-items {
     padding: 0px 13px;
 
-    @media only screen and (max-width:991px){
-        padding: 0px ;
+    @media only screen and (max-width:991px) {
+        padding: 0px;
     }
 }
