--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -381,7 +381,12 @@
     margin: 0px 7px;
   }
   .dropdown-menu{
- width: 150px;
+ min-width: 150px;
+ padding: 5px 10px;
+ border-radius: 3px;
+ li{
+    padding: 3px;
+ }
   }
 
 
